Added Docker file and Authentication functionality

--- a/backend/extensions/users-permissions/models/User.settings.json
+++ b/backend/extensions/users-permissions/models/User.settings.json
@@ -59,10 +59,8 @@
       "plugin": "users-permissions",
       "configurable": false
     },
-    "student_id": {
-      "type": "string",
-      "required": true,
-      "unique": true
+    "name": {
+      "type": "string"
     }
   }
 }
