Added Survey Functionality

--- a/backend/extensions/users-permissions/models/User.settings.json
+++ b/backend/extensions/users-permissions/models/User.settings.json
@@ -61,6 +61,10 @@
     },
     "name": {
       "type": "string"
+    },
+    "events": {
+      "via": "participants",
+      "collection": "event"
     }
   }
 }
