--- a/backend/api/event/models/event.settings.json
+++ b/backend/api/event/models/event.settings.json
@@ -61,6 +61,26 @@
       "type": "integer",
       "default": 20,
       "required": true
+    },
+    "participants": {
+      "plugin": "users-permissions",
+      "collection": "user",
+      "via": "events",
+      "dominant": true
+    },
+    "survey": {
+      "type": "json"
+    },
+    "cost": {
+      "type": "integer",
+      "default": 0
+    },
+    "paymentDone": {
+      "type": "boolean",
+      "default": false
+    },
+    "paymentData": {
+      "type": "json"
     }
   }
 }
