Changes in Docker File

--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -11,11 +11,11 @@ ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json ./
 COPY package-lock.json ./
 RUN npm install --silent
-RUN npm install react-scripts@latest -g --silent
 
 # add app
 COPY . ./
 
+EXPOSE 1337
 
 # start app
 CMD ["npm", "start"]
